# gridloop

./: .gitignore  AudioEngine.cpp  AudioEngine.h  AudioFile.cpp  AudioFile.h  CMakeLists.txt  FSR.cpp  FSR.h  FaustUI.cpp  FaustUI.h  FileManager.cpp  FileManager.h  Looper.cpp  Looper.h  LooperChannel.cpp  LooperChannel.h  LooperChunk.cpp  LooperChunk.h  LooperClip.cpp  LooperClip.h  LooperVoice.cpp  LooperVoice.h  LooperWidget.cpp  LooperWidget.h  OSC.cpp  OSC.h  PitchDetector.cpp  PitchDetector.h  SFSynth.cpp  SFSynth.h  Theremin.cpp  Theremin.h  Vocoder.cpp  Vocoder.h  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  main.cpp  tinyosc.c  tinyosc.h  (+1 more)
webui/: app.js  helpers.js  index.html  index.js  nexusUI.js  package.json  styles.css  ui.js
webui/css/: styles.css
webui/js/: functions.js  helpers.js  osc.js  setup.js  ui.js  variables.js
webui/lib/: nexusUI.js  zoomooz.js
