cmake_minimum_required(VERSION 3.9)
project(rtpiano)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_COMPILER    "/usr/bin/clang-3.9")
set(CMAKE_CXX_COMPILER  "/usr/bin/clang++-3.9")
include_directories(/usr/local/include/rtaudio)
include_directories(/usr/local/include/stk)
include_directories(/usr/lib/llvm-3.9/lib)
file(GLOB rtpiano_SRC
    "*.h"
    "*.cpp"
)
add_executable(rtpiano ${rtpiano_SRC} Looper.cpp Looper.h tinyosc.c tinyosc.h kiss_fft.c kiss_fft.h _kiss_fft_guts.h Vocoder.cpp Vocoder.h OSC.cpp OSC.h AudioEngine.cpp AudioEngine.h SFSynth.cpp SFSynth.h LooperChunk.cpp LooperChunk.h LooperClip.cpp LooperClip.h LooperVoice.cpp LooperVoice.h LooperChannel.cpp LooperChannel.h LooperWidget.cpp LooperWidget.h FaustUI.cpp FaustUI.h FileManager.cpp FileManager.h PitchDetector.cpp PitchDetector.h FSR.cpp FSR.h)
target_link_libraries(rtpiano rtaudio)
target_link_libraries(rtpiano stk)
target_link_libraries(rtpiano faust)
target_link_libraries(rtpiano LLVM-3.9)
target_link_libraries(rtpiano rt)
target_link_libraries(rtpiano dl)
target_link_libraries(rtpiano tinfo)
target_link_libraries(rtpiano pthread)
target_link_libraries(rtpiano z)
target_link_libraries(rtpiano m)
target_link_libraries(rtpiano ssl)
target_link_libraries(rtpiano crypto)
target_link_libraries(rtpiano aubio)